--- a/src/components/css/presentation.css
+++ b/src/components/css/presentation.css
@@ -4,6 +4,21 @@
 .slide > div.content {
   font-size: 2em;
 }
+p {
+  font-size: 28px;
+  line-height: 1.3;
+  text-align: justify;
+}
+
+.center {
+  text-align: center;
+}
+ul {
+  list-style: none;
+}
+li {
+  padding: 15px;
+}
 
 .nextBtn {
   position: fixed;
